# edge-pulse

./: .env.example  .gitignore  LICENSE  README.md
agent/: __init__.py  main.py
edge-agent/: .env.example  .gitignore  CHANGELOG.md  FINAL_STATUS.md  ISSUES_FIXED.md  Makefile  README.md  REFACTORING_SUMMARY.md  bootstrap_model.py  pyproject.toml  requirements.txt  setup.py
edge-agent/agent/: exceptions.py  main.py
edge-agent/agent/alerting/: alert_engine.py  notifier.py
edge-agent/agent/config/: privacy_controls.py  settings.py
edge-agent/agent/core/: __init__.py  detection_pipeline.py  training_manager.py
edge-agent/agent/detection/: autoencoder.py  ensemble.py  isolation_forest.py
edge-agent/agent/explainability/: report_generator.py  shap_explainer.py
edge-agent/agent/features/: __init__.py  extractor.py  normalizer.py
edge-agent/agent/logging/: __init__.py  hash_chain.py  log_manager.py
edge-agent/agent/models/: __init__.py  alerts.py  detection.py  telemetry.py
edge-agent/agent/sync/: supabase_client.py
edge-agent/agent/utils/: __init__.py
edge-agent/data/cache/: .gitkeep
edge-agent/docs/: api.md  architecture.md  deployment.md
edge-agent/edge-agent/src/models/: edgepulse_primary_isolation_forest.joblib
edge-agent/models/: .gitkeep
edge-agent/packaging/: agent_config.json
edge-agent/packaging/linux/: build_deb.sh  build_rpm.sh
edge-agent/packaging/scripts/: bootstrap_cli.py  seal_config.py
edge-agent/packaging/windows/: build_windows.ps1
edge-agent/packaging/windows/nsis/: installer.nsi
edge-agent/packaging/windows/pyinstaller/: edgepulse.spec
edge-agent/scripts/: export_logs.py  setup.py  setup.sh  train_models.py
edge-agent/src/data/: schema.sql
edge-agent/src/edgepulse/: __init__.py  __main__.py  agent.py  agent.py.bak  agent_core.py  async_pipeline.py  async_pipeline.py.bak  bootstrap_cli.py  cli.py  events_bus.py  events_bus.py.bak
edge-agent/src/edgepulse/agent/: __init__.py  agent.py  events.py  factory.py  handlers.py  monitoring.py  pipeline.py
edge-agent/src/edgepulse/alerts/: __init__.py  alert_engine.py  notifier.py
edge-agent/src/edgepulse/analysis/: __init__.py  alert_report.py  explainable_ai.py  report_generator.py  service.py
edge-agent/src/edgepulse/api/: __init__.py  api_server.py  deps.py  server.py
edge-agent/src/edgepulse/auth/: __init__.py  auth_client.py  credentials.py  device_auth_client.py  device_enrollment.py  enrollment.py  enrollment_manager.py
edge-agent/src/edgepulse/collectors/: __init__.py  filesystem_collector.py  network_collector.py  process_collector.py  system_collector.py  telemetry_collector.py
edge-agent/src/edgepulse/config/: __init__.py  manager.py  privacy.py  sealed_config.py  settings.py
edge-agent/src/edgepulse/core/: __init__.py  agent.py  alert_handler.py  async_pipeline.py  device_registry.py  enrollment_manager.py  events_bus.py  explainer_service.py  sync_service.py
edge-agent/src/edgepulse/data/: schema.sql
edge-agent/src/edgepulse/detectors/: __init__.py  autoencoder_reconstruction_detector.py  base.py  ensemble_detector.py  isolation_forest_detector.py  litert_backend.py  model_integrity.py  model_manager.py  sklearn_detector.py  tflite_detector.py
edge-agent/src/edgepulse/features/: __init__.py  cpu_features.py  disk_features.py  feature_extractor.py  feature_normalizer.py  history_utils.py  memory_features.py  network_features.py  process_features.py
edge-agent/src/edgepulse/models/: __init__.py  detection.py  metrics.py  schemas.py  sync.py
edge-agent/src/edgepulse/pipeline/: protocols.py
edge-agent/src/edgepulse/platform/: __init__.py  _paths.py
edge-agent/src/edgepulse/registry/: __init__.py
edge-agent/src/edgepulse/scripts/: bootstrap_model.py  train_model_notebook.ipynb  train_models.py  verify_datasets.py
edge-agent/src/edgepulse/security/: tamper_logger.py
edge-agent/src/edgepulse/shared/: __init__.py  constants.py  exceptions.py  metrics.py  schemas.py
edge-agent/src/edgepulse/storage/: __init__.py  chain.py  database.py  log_manager.py  log_writer.py
edge-agent/src/edgepulse/sync/: __init__.py  async_queue.py  cloud_sync.py  service.py  supabase.py  sync_fsm.py  sync_queue.py
edge-agent/src/edgepulse/utils/: __init__.py  device.py  device_id.py  error_handler.py  integrity.py  log_handler.py  path_manager.py  version.py
edge-agent/src/edgepulse_win/: __init__.py  __main__.py  agent_core.py  cli.py
edge-agent/src/edgepulse_win/alerts/: __init__.py  alert_engine.py  notifier.py
edge-agent/src/edgepulse_win/analysis/: __init__.py  explainable_ai.py  report_generator.py  reporter.py  shap_explainer.py
edge-agent/src/edgepulse_win/api/: api_server.py
edge-agent/src/edgepulse_win/auth/: __init__.py  auth_client.py  credentials.py  device_auth_client.py  device_enrollment.py  enrollment.py
edge-agent/src/edgepulse_win/collectors/: __init__.py  base.py  filesystem_collector.py  filesystem_monitor.py  network.py  network_collector.py  process.py  process_collector.py  system.py  system_collector.py  telemetry_collector.py
edge-agent/src/edgepulse_win/config/: __init__.py  manager.py  privacy.py  settings.py
edge-agent/src/edgepulse_win/core/: __init__.py  agent.py  async_pipeline.py  enrollment_manager.py  events_bus.py  pipeline.py  pipeline_manager.py  runtime.py  trainer.py
edge-agent/src/edgepulse_win/detectors/: __init__.py  autoencoder.py  autoencoder_reconstruction_detector.py  base.py  ensemble_detector.py  isolation_forest.py  isolation_forest_detector.py  model_integrity.py  model_manager.py  sklearn_detector.py  tflite_detector.py
edge-agent/src/models/: default-device_baseline.pkl  default-device_isolation_forest.pkl  edgepulse_primary_isolation_forest.joblib  edgepulse_primary_isolation_forest.json
edge-agent/tests/: __init__.py  conftest.py
edge-agent/tests/integration/: __init__.py  test_pipeline.py  test_sync.py
edge-agent/tests/simulation/: __init__.py  test_attacks.py
edge-agent/tests/unit/: __init__.py  test_collectors.py  test_detectors.py  test_features.py  test_storage.py
(+479 files in other folders)
