[tool.poetry]
name = "edge-agent"
version = "0.1.4"
description = "Edge agent for edge-pulse monitoring system"
authors = ["cipher_101"]
readme = "README.md"
packages = [{include = "edgepulse", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

psutil            = "^5.9.0"
numpy             = ">=1.26.0,<3.0.0"
scikit-learn      = ">=1.4.0,<2.0.0"
pydantic          = "^2.5.0"
pydantic-settings = "^2.11.0"
python-dotenv     = "^1.0.0"
cryptography      = ">=46.0.6"
structlog         = "^24.1.0"
aiosqlite         = "^0.20.0"
httpx             = ">=0.27.0,<1.0.0"
tenacity          = "^8.2.0"
joblib            = "^1.3.0"

ai-edge-litert = {version = ">=2.0.0", optional = true}
shap           = {version = ">=0.45.0,<1.0.0", optional = true}

fastapi  = {version = ">=0.115.0", optional = true}
uvicorn  = {version = ">=0.30.6", optional = true}

pywin32   = {version = "^306", optional = true, markers = "sys_platform == 'win32'"}
keyring   = {version = "^25.7.0", optional = true}
watchdog  = {version = "^4.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest     = "^8.0.0"
black      = "^24.0.0"
flake8     = "^7.0.0"
mypy       = "^1.8.0"
pandas     = "^3.0.0"
scikit-learn = ">=1.4.0,<2.0.0"
numpy        = ">=1.26.0,<3.0.0"
joblib       = "^1.3.0"

[tool.poetry.extras]
ml-explain    = ["shap"]
ml-inference  = ["ai-edge-litert", "shap"]
api-full      = ["fastapi", "uvicorn"]
windows       = ["pywin32", "keyring", "watchdog"]
linux         = ["keyring"]
all = [
  "ai-edge-litert",
  "shap",
  "fastapi",
  "uvicorn",
  "pywin32",
  "keyring",
  "watchdog",
]

[tool.poetry.scripts]
edge-agent = "edgepulse.__main__:main"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]