[project]
name = "edge-agent"
version = "0.1.5"
description = "Edge agent for edge-pulse anomaly detection system"
readme = "README.md"
authors = [{name = "cipher_101"}]
requires-python = ">=3.11,<3.14"

dependencies = [
    "psutil>=5.9.0,<6.0.0",
    "numpy>=1.26.0,<3.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "cryptography>=46.0.6",
    "structlog>=24.1.0,<25.0.0",
    "aiosqlite>=0.20.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "joblib>=1.3.0,<2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "shap>=0.45.0,<1.0.0",
    "lime>=0.2.0,<1.0.0",
    "ai-edge-litert>=2.0.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306,<307", "keyring>=25.7.0,<26.0.0"]
linux = ["keyring>=25.7.0,<26.0.0"]

[project.scripts]
edge-agent = "edgepulse.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "edgepulse", from = "src"}]
include = [
    {path = "src/edgepulse/data/*.sql", format = ["sdist", "wheel"]},
]

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.4.0"
mypy = "^1.8.0"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_error_summary = true
warn_unused_ignores = false
